правит разметку подвала на главной

--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
           <span class="before-after__text">Стало</span>
         </div>
       </section>
-      <section class="partnership">
-        <h2 class="visually-hidden">Партнёрство и сотрудничество</h2>
-        <p class="partnership__text">Приглашаем к сотрудничеству дилеров!</p>
-        <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </section>
-      <section class="map">
-        <h2 class="visually-hidden">Карта с адресом</h2>
-      </section>
     </main>
     <footer class="page-footer">
+      <div class="contacts page-footer__contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+      <div class="map page-footer__map">
+        <h2 class="visually-hidden">Карта с адресом</h2>
+      </div>
       <img class="company-name page-footer__company-name" src="#" width="" height="" alt="Cat Energy">
       <div class="socials page-footer__socials">
         <ul class="socials__list">
