--- a/catalog.html
+++ b/catalog.html
@@ -7,9 +7,9 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="#" width="" height="" alt="Логотип Cat Energy">
+        <img class="page-header__logo-image" src="#" width="10" height="10" alt="Логотип Cat Energy">
       </a>
-      <img class="company-name page-header__company-name" src="#" width="" height="" alt="Cat Energy">
+      <img class="company-name page-header__company-name" src="#" width="10" height="10" alt="Cat Energy">
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">Открыть меню</button>
         <div class="main-navigation__wrapper">
@@ -32,8 +32,8 @@
         <h2 class="catalog-main__title">Каталог продукци</h2>
         <ul class="catalog-main__list">
           <li class="catalog-main__item">
-            <img class="catalog-main__image" src="#" width="" height="" alt="Фото продукта">
-            <h3 class="catalog-main__item-title">Cat Energy PRO 500 г</h3>
+            <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
+            <h3 class="catalog-main__item-title text-subtitle">Cat Energy PRO 500 г</h3>
             <table class="catalog-main__info">
               <tr class="catalog-main__info-row">
                 <td class="catalog-main__info-cell">Объём</td>
@@ -51,8 +51,8 @@
             <a class="button catalog-main__button" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
-            <img class="catalog-main__image" src="#" width="" height="" alt="Фото продукта">
-            <h3 class="catalog-main__item-title">Cat Energy PRO 1000 г</h3>
+            <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
+            <h3 class="catalog-main__item-title text-subtitle">Cat Energy PRO 1000 г</h3>
             <table class="catalog-main__info">
               <tr class="catalog-main__info-row">
                 <td class="catalog-main__info-cell">Объём</td>
@@ -70,8 +70,8 @@
             <a class="button catalog-main__button" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
-            <img class="catalog-main__image" src="#" width="" height="" alt="Фото продукта">
-            <h3 class="catalog-main__item-title">Cat Energy PRO 500 г</h3>
+            <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
+            <h3 class="catalog-main__item-title text-subtitle">Cat Energy PRO 500 г</h3>
             <table class="catalog-main__info">
               <tr class="catalog-main__info-row">
                 <td class="catalog-main__info-cell">Объём</td>
@@ -89,8 +89,8 @@
             <a class="button catalog-main__button" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
-            <img class="catalog-main__image" src="#" width="" height="" alt="Фото продукта">
-            <h3 class="catalog-main__item-title">Cat Energy PRO 1000 г</h3>
+            <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
+            <h3 class="catalog-main__item-title text-subtitle">Cat Energy PRO 1000 г</h3>
             <table class="catalog-main__info">
               <tr class="catalog-main__info-row">
                 <td class="catalog-main__info-cell">Объём</td>
@@ -108,8 +108,8 @@
             <a class="button catalog-main__button" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
-            <img class="catalog-main__image" src="#" width="" height="" alt="Фото продукта">
-            <h3 class="catalog-main__item-title">Cat Energy SLIM 500 г</h3>
+            <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
+            <h3 class="catalog-main__item-title text-subtitle">Cat Energy SLIM 500 г</h3>
             <table class="catalog-main__info">
               <tr class="catalog-main__info-row">
                 <td class="catalog-main__info-cell">Объём</td>
@@ -127,8 +127,8 @@
             <a class="button catalog-main__button" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
-            <img class="catalog-main__image" src="#" width="" height="" alt="Фото продукта">
-            <h3 class="catalog-main__item-title">Cat Energy SLIM 1000 г</h3>
+            <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
+            <h3 class="catalog-main__item-title text-subtitle">Cat Energy SLIM 1000 г</h3>
             <table class="catalog-main__info">
               <tr class="catalog-main__info-row">
                 <td class="catalog-main__info-cell">Объём</td>
@@ -146,8 +146,8 @@
             <a class="button catalog-main__button" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
-            <img class="catalog-main__image" src="#" width="" height="" alt="Фото продукта">
-            <h3 class="catalog-main__item-title">Cat Energy PRO 500 г</h3>
+            <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
+            <h3 class="catalog-main__item-title text-subtitle">Cat Energy PRO 500 г</h3>
             <table class="catalog-main__info">
               <tr class="catalog-main__info-row">
                 <td class="catalog-main__info-cell">Объём</td>
@@ -167,7 +167,7 @@
         </ul>
       </section>
       <section class="show-more">
-        <h3 class="show-more__title">Показать еще 100500 товаров</h3>
+        <h3 class="show-more__title text-subtitle">Показать еще 100500 товаров</h3>
         <p class="show-more__text">На самом деле вкусов гораздо больше!</p>
         <button class="button show-more__button" type="button">Показать все</button>
       </section>
@@ -175,61 +175,62 @@
         <h2 class="catalog-additional__title">Дополнительные товары</h2>
         <ul class="catalog-additional__list">
           <li class="catalog-additional__item">
-            <h3 class="catalog-additional__item-title">Сахарозаменитель</h3>
+            <h3 class="catalog-additional__item-title text-subtitle">Сахарозаменитель</h3>
             <table class="catalog-additional__info">
               <tr class="catalog-additional__row">
                 <td class="catalog-additional__cell">1 Упаковка</td>
                 <td class="catalog-additional__cell">100 Р.</td>
               </tr>
             </table>
-            <a class="catalog-additional__button" href="#">Заказать</a>
+            <a class="button atalog-additional__button" href="#">Заказать</a>
           </li>
           <li class="catalog-additional__item">
-            <h3 class="catalog-additional__item-title">Питьевая вода</h3>
+            <h3 class="catalog-additional__item-title text-subtitle">Питьевая вода</h3>
             <table class="catalog-additional__info">
               <tr class="catalog-additional__row">
                 <td class="catalog-additional__cell">5 литров</td>
                 <td class="catalog-additional__cell">50 Р.</td>
               </tr>
             </table>
-            <a class="catalog-additional__button" href="#">Заказать</a>
+            <a class="button atalog-additional__button" href="#">Заказать</a>
           </li>
           <li class="catalog-additional__item">
-            <h3 class="catalog-additional__item-title">Молоко</h3>
+            <h3 class="catalog-additional__item-title text-subtitle">Молоко</h3>
             <table class="catalog-additional__info">
               <tr class="catalog-additional__row">
                 <td class="catalog-additional__cell">1 литр</td>
                 <td class="catalog-additional__cell">100 Р.</td>
               </tr>
             </table>
-            <a class="catalog-additional__button" href="#">Заказать</a>
+            <a class="button atalog-additional__button" href="#">Заказать</a>
           </li>
           <li class="catalog-additional__item">
-            <h3 class="catalog-additional__item-title">Витамины</h3>
+            <h3 class="catalog-additional__item-title text-subtitle">Витамины</h3>
             <table class="catalog-additional__info">
               <tr class="catalog-additional__row">
                 <td class="catalog-additional__cell">1 Упаковка (30 г)</td>
                 <td class="catalog-additional__cell">300 Р.</td>
               </tr>
             </table>
-            <a class="catalog-additional__button" href="#">Заказать</a>
+            <a class="button atalog-additional__button" href="#">Заказать</a>
           </li>
         </ul>
       </section>
       <section class="present">
+        <h2 class="visually-hidden">Подарок</h2>
         <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
       </section>
     </main>
     <footer class="page-footer">
       <div class="contacts page-footer__contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__text text-subtitle">Приглашаем к сотрудничеству дилеров!</p>
         <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <div class="map page-footer__map">
         <h2 class="visually-hidden">Карта с адресом</h2>
       </div>
-      <img class="company-name page-footer__company-name" src="#" width="" height="" alt="Cat Energy">
+      <img class="company-name page-footer__company-name" src="#" width="10" height="10" alt="Cat Energy">
       <div class="socials page-footer__socials">
         <ul class="socials__list">
           <li class="socials__item">
@@ -245,9 +246,9 @@
       </div>
       <div class="copyright page-footer__copyright">
         <a class="link copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        <div class="copyright__logo">
-          <img class="copyright__image" src="#" width="" height="" alt="Лого HTML Academy">
-        </div>
+        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+          <img class="copyright__image" src="#" width="10" height="10" alt="Лого HTML Academy">
+        </a>
       </div>
     </footer>
   </body>
