--- a/form.html
+++ b/form.html
@@ -7,9 +7,9 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="#" width="" height="" alt="Логотип Cat Energy">
+        <img class="page-header__logo-image" src="#" width="10" height="10" alt="Логотип Cat Energy">
       </a>
-      <img class="company-name page-header__company-name" src="#" width="" height="" alt="Cat Energy">
+      <img class="company-name page-header__company-name" src="#" width="10" height="10" alt="Cat Energy">
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">Открыть меню</button>
         <div class="main-navigation__wrapper">
@@ -90,13 +90,13 @@
     <footer class="page-footer">
       <div class="contacts page-footer__contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__text text-subtitle">Приглашаем к сотрудничеству дилеров!</p>
         <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <div class="map page-footer__map">
         <h2 class="visually-hidden">Карта с адресом</h2>
       </div>
-      <img class="company-name page-footer__company-name" src="#" width="" height="" alt="Cat Energy">
+      <img class="company-name page-footer__company-name" src="#" width="10" height="10" alt="Cat Energy">
       <div class="socials page-footer__socials">
         <ul class="socials__list">
           <li class="socials__item">
@@ -112,9 +112,9 @@
       </div>
       <div class="copyright page-footer__copyright">
         <a class="link copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        <div class="copyright__logo">
-          <img class="copyright__image" src="#" width="" height="" alt="Лого HTML Academy">
-        </div>
+        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+          <img class="copyright__image" src="#" width="10" height="10" alt="Лого HTML Academy">
+        </a>
       </div>
     </footer>
   </body>
