--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="#" width="" height="" alt="Логотип Cat Energy">
+        <img class="page-header__logo-image" src="#" width="10" height="10" alt="Логотип Cat Energy">
       </a>
-      <img class="company-name page-header__company-name" src="#" width="" height="" alt="Cat Energy">
+      <img class="company-name page-header__company-name" src="#" width="10" height="10" alt="Cat Energy">
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">Открыть меню</button>
         <div class="main-navigation__wrapper">
@@ -31,7 +31,7 @@
       <section class="promo">
         <h1 class="promo__title">Функциональное питание для котов</h1>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <img class="promo__image" src="#" width="" height="" alt="Товар Cat Energy">
+        <img class="promo__image" src="#" width="10" height="10" alt="Товар Cat Energy">
         <a class="button promo__button" href="form.html">Подобрать программу</a>
       </section>
       <section class="programs">
@@ -40,12 +40,12 @@
           <li class="programs__item programs__item--slim">
             <h3 class="programs__title">Похудение</h3>
             <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="link programs__catalog-link">Каталог Slim</a>
+            <a class="link programs__catalog-link text-subtitle">Каталог Slim</a>
           </li>
           <li class="programs__item programs__item--pro">
-            <h2 class="programs__title">Набор массы</h3>
+            <h3 class="programs__title">Набор массы</h3>
             <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="link programs__catalog-link">Каталог pro</a>
+            <a class="link programs__catalog-link text-subtitle">Каталог pro</a>
           </li>
         </ul>
       </section>
@@ -75,26 +75,26 @@
           </ul>
         </div>
         <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
-        <img class="example__image" src="#" width="" height="" alt="Фото кота">
+        <img class="example__image" src="#" width="10" height="10" alt="Фото кота">
         <div class="before-after example__before-after">
-          <span class="before-after__text">Было</span>
+          <span class="before-after__text text-subtitle">Было</span>
           <div class="before-after__switch">
             <div class="before-after__switch-on"></div>
           </div>
-          <span class="before-after__text">Стало</span>
+          <span class="before-after__text text-subtitle">Стало</span>
         </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="contacts page-footer__contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__text text-subtitle">Приглашаем к сотрудничеству дилеров!</p>
         <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <div class="map page-footer__map">
         <h2 class="visually-hidden">Карта с адресом</h2>
       </div>
-      <img class="company-name page-footer__company-name" src="#" width="" height="" alt="Cat Energy">
+      <img class="company-name page-footer__company-name" src="#" width="10" height="10" alt="Cat Energy">
       <div class="socials page-footer__socials">
         <ul class="socials__list">
           <li class="socials__item">
@@ -110,9 +110,9 @@
       </div>
       <div class="copyright page-footer__copyright">
         <a class="link copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        <div class="copyright__logo">
-          <img class="copyright__image" src="#" width="" height="" alt="Лого HTML Academy">
-        </div>
+        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+          <img class="copyright__image" src="#" width="10" height="10" alt="Лого HTML Academy">
+        </a>
       </div>
     </footer>
   </body>
