--- a/source/index.html
+++ b/source/index.html
@@ -16,13 +16,13 @@
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item main-navigation__item--active">
-              <a class="link main-navigation__link">Главная</a>
+              <a class="link main-navigation__link text text--menu">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="link main-navigation__link" href="catalog.html">Каталог продукции</a>
+              <a class="link main-navigation__link text text--menu" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-navigation__item">
-              <a class="link main-navigation__link" href="form.html">Подбор программы</a>
+              <a class="link main-navigation__link text text--menu" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -31,27 +31,27 @@
     <main class="page-main">
       <section class="promo">
         <h1 class="promo__title text text--title">Функциональное питание для котов</h1>
-        <p class="promo__slogan">Занялся собой? Займись котом!</p>
+        <p class="promo__slogan text">Занялся собой? Займись котом!</p>
         <img class="promo__image" src="#" width="10" height="10" alt="Товар Cat Energy">
-        <a class="button promo__button" href="form.html">Подобрать программу</a>
+        <a class="promo__button button text" href="form.html">Подобрать программу</a>
       </section>
       <section class="programs">
-        <h2 class="promo__title">Программы питания</h2>
+        <h2 class="visually-hidden">Программы питания</h2>
         <ul class="programs__list">
           <li class="programs__item programs__item--slim">
-            <h3 class="programs__title">Похудение</h3>
+            <h3 class="programs__title text text--subtitle">Похудение</h3>
             <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="link programs__catalog-link text-subtitle">Каталог Slim</a>
+            <a class="programs__catalog-link link text text--bigger">Каталог Slim</a>
           </li>
           <li class="programs__item programs__item--pro">
-            <h3 class="programs__title">Набор массы</h3>
+            <h3 class="programs__title text text--subtitle">Набор массы</h3>
             <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="link programs__catalog-link text-subtitle">Каталог pro</a>
+            <a class="programs__catalog-link link text text--bigger">Каталог pro</a>
           </li>
         </ul>
       </section>
       <section class="process">
-        <h2 class="process__title">Как это работает</h2>
+        <h2 class="process__title text text--title">Как это работает</h2>
         <ul class="process__list">
           <li class="process__item process__item--nutrients">Функциональное питание содержит только полезные питательные вещества.</li>
           <li class="process__item process__item--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
@@ -60,36 +60,36 @@
         </ul>
       </section>
       <section class="example">
-        <h2 class="example__title">Живой пример</h2>
+        <h2 class="example__title text text--title">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
         При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
         <div class="example__statistics">
           <ul class="example__statistics-list">
             <li class="example__statistics-item">
-              <div class="example__statistics-value">5 кг</div>
+              <div class="example__statistics-value text text--subtitle">5 кг</div>
               <p class="example__statistics-text">Снижение веса</p>
             </li>
             <li class="example__statistics-item">
-              <div class="example__statistics-value">60 дней</div>
+              <div class="example__statistics-value text text--subtitle">60 дней</div>
               <p class="example__statistics-text">Затрачено времени</p>
             </li>
           </ul>
         </div>
-        <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
+        <p class="example__expenses text">Затраты на питание: 15 000 руб.</p>
         <img class="example__image" src="#" width="10" height="10" alt="Фото кота">
         <div class="before-after example__before-after">
-          <span class="before-after__text text-subtitle">Было</span>
+          <span class="before-after__text text text-bigger">Было</span>
           <div class="before-after__switch">
             <div class="before-after__switch-on"></div>
           </div>
-          <span class="before-after__text text-subtitle">Стало</span>
+          <span class="before-after__text text text--bigger">Стало</span>
         </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="contacts page-footer__contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <p class="contacts__text text-subtitle">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__text text text--bigger">Приглашаем к сотрудничеству дилеров!</p>
         <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <div class="map page-footer__map">
@@ -110,7 +110,7 @@
         </ul>
       </div>
       <div class="copyright page-footer__copyright">
-        <a class="link copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
           <img class="copyright__image" src="#" width="10" height="10" alt="Лого HTML Academy">
         </a>
