Добавляет базовую стилизацию

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,7 +30,7 @@
     </header>
     <main class="page-main">
       <section class="catalog-main">
-        <h2 class="catalog-main__title text text--title">Каталог продукци</h2>
+        <h2 class="catalog-main__title text text--title">Каталог продукции</h2>
         <ul class="catalog-main__list">
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
@@ -218,11 +218,13 @@
         </ul>
       </section>
       <section class="present">
-        <h2 class="visually-hidden">Подарок</h2>
-        <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="present-wrapper">
+          <h2 class="visually-hidden">Подарок</h2>
+          <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
+        </div>
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer page-footer--catalog">
       <div class="contacts page-footer__contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__text text text--bigger">Приглашаем к сотрудничеству дилеров!</p>
@@ -231,25 +233,27 @@
       <div class="map page-footer__map">
         <h2 class="visually-hidden">Карта с адресом</h2>
       </div>
-      <img class="company-name page-footer__company-name" src="#" width="10" height="10" alt="Cat Energy">
-      <div class="socials page-footer__socials">
-        <ul class="socials__list">
-          <li class="socials__item">
-            <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--inst" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбук</a>
-          </li>
-        </ul>
-      </div>
-      <div class="copyright page-footer__copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="#" width="10" height="10" alt="Лого HTML Academy">
-        </a>
+      <div class="page-footer__bottom">
+        <img class="company-name page-footer__company-name" src="#" width="10" height="10" alt="Cat Energy">
+        <div class="socials page-footer__socials">
+          <ul class="socials__list">
+            <li class="socials__item">
+              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--inst" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбук</a>
+            </li>
+          </ul>
+        </div>
+        <div class="copyright page-footer__copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+            <img class="copyright__image" src="#" width="10" height="10" alt="Лого HTML Academy">
+          </a>
+        </div>
       </div>
     </footer>
   </body>
