Правит класс text-bigger

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -49,7 +49,7 @@
                 <td class="catalog-main__info-cell">700 Р.</td>
               </tr>
             </table>
-            <a class="catalog-main__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
@@ -68,7 +68,7 @@
                 <td class="catalog-main__info-cell">1000 Р.</td>
               </tr>
             </table>
-            <a class="catalog-main__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
@@ -87,7 +87,7 @@
                 <td class="catalog-main__info-cell">700 Р.</td>
               </tr>
             </table>
-            <a class="catalog-main__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
@@ -106,7 +106,7 @@
                 <td class="catalog-main__info-cell">1000 Р.</td>
               </tr>
             </table>
-            <a class="catalog-main__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
@@ -125,7 +125,7 @@
                 <td class="catalog-main__info-cell">400 Р.</td>
               </tr>
             </table>
-            <a class="catalog-main__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
@@ -144,7 +144,7 @@
                 <td class="catalog-main__info-cell">700 Р.</td>
               </tr>
             </table>
-            <a class="catalog-main__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
@@ -163,7 +163,7 @@
                 <td class="catalog-main__info-cell">500 Р.</td>
               </tr>
             </table>
-            <a class="catalog-main__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
         </ul>
       </section>
@@ -183,7 +183,7 @@
                 <td class="catalog-additional__cell">100 Р.</td>
               </tr>
             </table>
-            <a class="catalog-additional__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-additional__item">
             <h3 class="catalog-additional__item-title text text--bigger">Питьевая вода</h3>
@@ -193,7 +193,7 @@
                 <td class="catalog-additional__cell">50 Р.</td>
               </tr>
             </table>
-            <a class="catalog-additional__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-additional__item">
             <h3 class="catalog-additional__item-title text text--bigger">Молоко</h3>
@@ -203,7 +203,7 @@
                 <td class="catalog-additional__cell">100 Р.</td>
               </tr>
             </table>
-            <a class="catalog-additional__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-additional__item">
             <h3 class="catalog-additional__item-title text text--bigger">Витамины</h3>
@@ -213,7 +213,7 @@
                 <td class="catalog-additional__cell">300 Р.</td>
               </tr>
             </table>
-            <a class="catalog-additional__button button text text-bigger" href="#">Заказать</a>
+            <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
           </li>
         </ul>
       </section>
