--- a/source/form.html
+++ b/source/form.html
@@ -84,7 +84,7 @@
             <input class="form__checkbox" type="checkbox" name="vitamins">Витамины
           </label>
         </fieldset>
-        <button class="form__button button text text-bigger" type="submit" value="Отправить заявку">Отправить заявку</button>
+        <button class="form__button button text text--bigger" type="submit" value="Отправить заявку">Отправить заявку</button>
         <div class="form__required"><sup>*</sup> — обязательные поля</div>
       </form>
     </main>
