--- a/source/index.html
+++ b/source/index.html
@@ -78,7 +78,7 @@
         <p class="example__expenses text">Затраты на питание: 15 000 руб.</p>
         <img class="example__image" src="#" width="10" height="10" alt="Фото кота">
         <div class="before-after example__before-after">
-          <span class="before-after__text text text-bigger">Было</span>
+          <span class="before-after__text text text--bigger">Было</span>
           <div class="before-after__switch">
             <div class="before-after__switch-on"></div>
           </div>
