--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,13 +16,13 @@
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
-              <a class="link main-navigation__link text text-menu" href="index.html">Главная</a>
+              <a class="link main-navigation__link text text--menu" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item main-navigation__item--active">
-              <a class="link main-navigation__link text text-menu">Каталог продукции</a>
+              <a class="link main-navigation__link text text--menu">Каталог продукции</a>
             </li>
             <li class="main-navigation__item">
-              <a class="link main-navigation__link text text-menu" href="form.html">Подбор программы</a>
+              <a class="link main-navigation__link text text--menu" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
