Сетки и микросетки для главной в мобильной и планшетной версии

--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Подбор программы от Cat Energy</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -16,13 +17,13 @@
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
-              <a class="link main-navigation__link text text--menu" href="index.html">Главная</a>
+              <a class="main-navigation__link text text--menu" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="link main-navigation__link text text--menu" href="catalog.html">Каталог продукции</a>
+              <a class="main-navigation__link text text--menu" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-navigation__item main-navigation__item--active">
-              <a class="link main-navigation__link text text--menu">Подбор программы</a>
+              <a class="main-navigation__link text text--menu">Подбор программы</a>
             </li>
           </ul>
         </div>
