--- a/source/index.html
+++ b/source/index.html
@@ -3,26 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Cat Energy</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="#" width="10" height="10" alt="Логотип Cat Energy">
-      </a>
-      <img class="company-name page-header__company-name" src="#" width="10" height="10" alt="Cat Energy">
+      <div class="page-header__top">
+        <a class="page-header__logo" href="#">
+          <img class="page-header__logo-image" src="#" width="10" height="10" alt="Логотип Cat Energy">
+        </a>
+        <img class="company-name page-header__company-name" src="#" width="10" height="10" alt="Cat Energy">
+        <button class="page-header__toggle" type="button">Открыть меню</button>
+      </div>
       <nav class="main-navigation">
-        <button class="main-navigation__toggle" type="button">Открыть меню</button>
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
-            <li class="main-navigation__item main-navigation__item--active">
-              <a class="link main-navigation__link text text--menu">Главная</a>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link text main-navigation__link--active">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="link main-navigation__link text text--menu" href="catalog.html">Каталог продукции</a>
+              <a class="main-navigation__link text" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-navigation__item">
-              <a class="link main-navigation__link text text--menu" href="form.html">Подбор программы</a>
+              <a class="main-navigation__link text" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -41,56 +44,69 @@
           <li class="programs__item programs__item--slim">
             <h3 class="programs__title text text--subtitle">Похудение</h3>
             <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="programs__catalog-link link text text--bigger">Каталог Slim</a>
+            <a class="programs__catalog-link link text text--bigger" href="#">Каталог Slim</a>
           </li>
           <li class="programs__item programs__item--pro">
             <h3 class="programs__title text text--subtitle">Набор массы</h3>
             <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="programs__catalog-link link text text--bigger">Каталог pro</a>
+            <a class="programs__catalog-link link text text--bigger" href="#">Каталог pro</a>
           </li>
         </ul>
       </section>
       <section class="process">
         <h2 class="process__title text text--title">Как это работает</h2>
         <ul class="process__list">
-          <li class="process__item process__item--nutrients">Функциональное питание содержит только полезные питательные вещества.</li>
-          <li class="process__item process__item--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-          <li class="process__item process__item--replace">Замените один-два приема обычной еды на наше фунцкциональное питание.</li>
-          <li class="process__item process__item--results">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          <li class="process__item process__item--nutrients">
+            <p class="process__text">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="process__item process__item--powder">
+            <p class="process__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="process__item process__item--replace">
+            <p class="process__text">Замените один-два приема обычной еды на наше фунциональное питание.</p>
+          </li>
+          <li class="process__item process__item--results">
+            <p class="process__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
         </ul>
       </section>
       <section class="example">
         <h2 class="example__title text text--title">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
         При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <div class="example__statistics">
-          <ul class="example__statistics-list">
-            <li class="example__statistics-item">
-              <div class="example__statistics-value text text--subtitle">5 кг</div>
-              <p class="example__statistics-text">Снижение веса</p>
-            </li>
-            <li class="example__statistics-item">
-              <div class="example__statistics-value text text--subtitle">60 дней</div>
-              <p class="example__statistics-text">Затрачено времени</p>
-            </li>
-          </ul>
-        </div>
-        <p class="example__expenses text">Затраты на питание: 15 000 руб.</p>
-        <img class="example__image" src="#" width="10" height="10" alt="Фото кота">
-        <div class="before-after example__before-after">
-          <span class="before-after__text text text--bigger">Было</span>
-          <div class="before-after__switch">
-            <div class="before-after__switch-on"></div>
+        <div class="example__middle">
+          <div class="example__statistics">
+            <ul class="example__statistics-list">
+              <li class="example__statistics-item">
+                <div class="example__statistics-value text text--subtitle">5 кг</div>
+                <p class="example__statistics-text">Снижение веса</p>
+              </li>
+              <li class="example__statistics-item">
+                <div class="example__statistics-value text text--subtitle">60 дней</div>
+                <p class="example__statistics-text">Затрачено времени</p>
+              </li>
+            </ul>
           </div>
-          <span class="before-after__text text text--bigger">Стало</span>
+          <p class="example__expenses text">Затраты на питание: 15 000 руб.</p>
         </div>
+          <img class="example__image" src="#" width="10" height="10" alt="Фото кота">
+          <div class="before-after example__before-after">
+            <span class="before-after__text text text--bigger">Было</span>
+            <div class="before-after__switch">
+              <div class="before-after__switch-on"></div>
+            </div>
+            <span class="before-after__text text text--bigger">Стало</span>
+          </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="contacts page-footer__contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__text text text--bigger">Приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <div class="contacts__adress">
+          <p class="contacts__street">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contacts__city">Санкт-Петербург</p>
+        </div>
       </div>
       <div class="map page-footer__map">
         <h2 class="visually-hidden">Карта с адресом</h2>
